refactor: SoftAssertions와 recursiveComparison()를 활용해 서비스 테스트 수정